# lead_management_api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: config.py  main.py
app/models/: database.py  models.py  schemas.py
app/routers/: leads.py  users.py
app/services/: database.py  leads.py  users.py
tests/: conftest.py  test_routers.py
